<resources>
    <string name="app_name">Deportes+</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_news">Noticias</string>
    <string name="title_workshops">Talleres</string>
    <string name="title_activities">Actividades</string>
    <string name="title_profile">Perfil</string>
    <string name="login">Iniciar sesión</string>
    <string name="facebook_app_id">497420797001996</string>
    <string name="fb_login_protocol_scheme">fb497420797001996</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Contraseña</string>
    <string name="terms_and_conditions_advice">Al ingresar o registrarte con tu email, aceptas los Términos y Condiciones de uso de Deportes+.</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="empty_field_error">Este campo no puede estar vacío</string>
    <string name="invalid_email_error">Email invalido</string>
    <string name="invalid_password_error">Contraseña invalida, debe contener minimo 6 caracteres</string>
    <string name="hint_confirm_password">Repetir contraseña</string>
    <string name="register">Regístrate</string>
    <string name="not_matching_pasword_error">Las contraseñas no coinciden</string>
    <string name="register_success_message">A confirmation email was sent to your email. You must follow the instructions in the email before your account can be activated</string>
    <string name="news_title">Noticias</string>
    <string name="explore_title">Explorar</string>
    <string name="my_workshops">Mis talleres</string>
    <string name="formatives">Formativos</string>
    <string name="recreatives">Recreativos</string>
    <string name="n_comments">%s comentarios</string>
    <string name="n_comment">%s comentario</string>
    <string name="send_communication">Enviar comunicación</string>
    <string name="actual_assistance_counter">Asistencia actual: %s</string>
    <string name="assistance_counter">Asistencia: %s</string>
    <string name="instructor_name">Instructor: %s</string>
    <string name="progress_count">Progreso: %s</string>
    <string name="n_workshops">%s talleres disponibles</string>
    <string name="see_more">ver más</string>
    <string name="n_available_spaces">%s cupos disponibles</string>
    <string name="enrolled">Inscrito</string>
    <string name="institution">Insitución</string>
    <string name="user_data_title">Datos de usuario</string>
    <string name="mail_title">Mail</string>
    <string name="rut_title">Rut</string>
    <string name="name_title">Nombre</string>
    <string name="address_title">Dirección</string>
    <string name="not_defined">No definido</string>
    <string name="see_assistance">ver asistencia</string>
    <string name="participants_count">Nº de alumnos: %s</string>
    <string name="time_interval">Horario: %s</string>
    <string name="all_disciplines">Todas las disciplinas</string>
    <string name="discipline_subtitle">Disciplina:</string>
    <string name="all">Todas</string>
    <string name="error_connection_message">Revisa tu conexión a internet</string>
    <string name="no_workshops_found_description">No se han encontrado talleres, intenta con otra disciplina.</string>
    <string name="subscribe_me">Inscribirme</string>
    <string name="address_s">Dirección: %s</string>
    <string name="confirmation">Confirmación</string>
    <string name="confirmation_subscribe_message">¿Realmente deseas inscribirte?</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="great">¡Genial!</string>
    <string name="successfull_subscription">Inscripción exitosa</string>
    <string name="already_subscribed">Ya estás inscrito</string>
    <string name="attendance">Asistencia</string>
    <string name="enclosure_s">Recinto: %s</string>
    <string name="save">Guardar</string>
    <string name="name">Nombre</string>
    <string name="date">Fecha</string>
    <string name="start_date">Hora inicio</string>
    <string name="end_date">Hora termino</string>
    <string name="hint_objetive">Objetivo</string>
    <string name="hint_content">Contenido</string>
    <string name="title_create_lesson">Crear clase</string>
    <string name="title_lesson_detail">Detalle de clase</string>
    <string name="edit">Editar</string>
    <string name="no_lessons_found_description">De momento, no existen clases en este taller.</string>
    <string name="successfull_lesson_creation">Clase creada exitosamente</string>
    <string name="title_edit_lesson">Editar clase</string>
    <string name="logout">Cerrar sesión</string>
    <string name="successfull_lesson_edition">Clase editada exitosamente</string>
    <string name="no_members_found_description">Esta clase no tiene miembros aún</string>
    <string name="no_news_founds_description">Por ahora no se han publicado noticias.</string>
    <string name="confirmation_logout_message">¿Deseas cerrar sesión?</string>
    <string name="hint_publication_description">Escribe un pie de foto</string>
    <string name="post">Publicar</string>
    <string name="title_create_publication">Crear noticia</string>
    <string name="successfull_publication_creation">Noticia publicada exitosamente</string>
    <string name="how_to_get_there">¿Cómo llegar?</string>
    <string name="generic_error_message">Ha habido un problema</string>
    <string name="last_name">Apellido</string>
    <string name="rut">RUT</string>
    <string name="address">Dirección</string>
    <string name="password">Contraseña</string>
    <string name="successfull_user_edition">Datos editados correctamente</string>
    <string name="invalid_rut_error">RUT invalido, debe tener guión y sin puntos.</string>
    <string name="title_edit_user">Editar usuario</string>
    <string name="take_from">Tomar desde:</string>
    <string name="canceled">Cancelado</string>
    <string name="declined_permissions">Es necesario que aceptes los permisos</string>
    <string name="no_image_taked_error">Debes tomar una foto para ppublicar tu noticia</string>
    <string name="you_must_complete_your_personal_data_first">Para inscribirte, debes completar tus datos personales</string>
    <string name="title_new_app_version">¡Nueva versión disponible!</string>
    <string name="description_new_app_version">Descarga a nueva versión y conoce nuestras novedades</string>
    <string name="go_to_playstore">Descargar ahora</string>
    <string name="later">Más tarde</string>
    <string name="no_my_workshops_placeholder">No estas inscrito en ningún taller, explora las disciplinas e incríbete en alguno.</string>
    <string name="edit_password_hint">Escribe una nueva contraseña (opcional)</string>
    <string name="comments">Comentarios</string>
    <string name="send">Enviar</string>
    <string name="add_a_comment">Ingresa tu comentario</string>
    <string name="no_comments_found_description">Esta publicación no tiene comentarios aún, ¡escribe el primero!.</string>
    <string name="successfull_comment_deleted">Comentario eliminado satisfactoriamente</string>
    <string name="confirmation_delete_comment_message">¿Realmente deseas eliminar este comentario?</string>
    <string name="no_availability">Sin cupos</string>
    <string name="recover_password">Recuperar contraseña</string>
    <string name="done">¡Listo!</string>
    <string name="email_sent_message">Te hemos enviado un email, revisa tu bandeja de entrada.</string>
</resources>
